prepare part 4